# polytool

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: langchain_agent.py  langchain_tools.py  litellm_direct.py  mcp_tools.py  quickstart.py
examples/.ipynb_checkpoints/: langchain_integration-checkpoint.ipynb
polytool/: __init__.py
polytool/agent/: __init__.py  agent.py
polytool/codegen/: __init__.py  executor.py  prompts.py
polytool/core/: __init__.py  config.py  exceptions.py  types.py
polytool/exports/: __init__.py  base.py
polytool/providers/: __init__.py  base.py  litellm.py
polytool/sandbox/: __init__.py  base.py  e2b.py  restricted.py
polytool/tools/: __init__.py  decorator.py  langchain.py  mcp.py  registry.py  universal.py
polytool/tools/builtin/: __init__.py  filesystem.py  http.py  shell.py
