[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polytool"
version = "0.1.0"
description = "Universal tool orchestration for LLMs - Programmatic Tool Calling for any provider"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "polytool"}
]
keywords = [
    "llm",
    "ai",
    "tools",
    "agents",
    "openai",
    "anthropic",
    "mcp",
    "langchain",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "litellm>=1.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
e2b = [
    "e2b-code-interpreter>=1.0",
]
mcp = [
    "mcp>=1.0",
]
langchain = [
    "langchain-core>=0.2",
]
cli = [
    "typer>=0.12",
    "rich>=13.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = [
    "polytool[e2b,mcp,langchain,cli,dev]",
]

[project.scripts]
polytool = "polytool.cli.main:app"

[project.urls]
Homepage = "https://github.com/polytool/polytool"
Documentation = "https://github.com/polytool/polytool#readme"
Repository = "https://github.com/polytool/polytool"

[tool.hatch.build.targets.wheel]
packages = ["polytool"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["polytool"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=polytool --cov-report=term-missing"


